# sky_pro

./: .env.example  .gitignore  README.md  logfile.txt  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_reading_py.html  z_145eef247bfb46b6_searching_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html
src/: .\logs\rrrr.txt  decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  reading.py  searching.py  utils.py  widget.py
tests/: conftest.py  test_decorators_log.py  test_external_api_get_amount_of_transactions.py  test_generators_card_number_generator.py  test_generators_filter_by_currency.py  test_generators_transaction_descriptions.py  test_main.py  test_mask_get_mask_account.py  test_masks.py  test_masks_get_mask_card_number.py  test_processing_filter_by_state.py  test_processing_sort_by_date.py  test_reading_get_transactions_from_csv.py  test_reading_get_transactions_from_excel.py  test_searching.py  test_utils_get_list_of_transactions.py  test_widget.py  test_widget_get_date.py  test_widget_mask_account_card.py
