[tool.poetry]
name = "skypro-project"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[tool.poetry.group.lint.dependencies]
mypy = "^1.13.0"
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'


[tool.isort]
line_length = 119


[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.git
  )/
)
'''


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

